# PyTorch-YOLOv4

./: .gitignore  README.md  evaluate.py  setup.cfg  train.py
config/: .create_custom_model.sh.swp  .yolov3-tiny.cfg.swp  yolov3.cfg
models/: layers.py  utils.py  yolov3.py
src/yolov4/: bbox_ops.py  datasets.py  evaluate.py  logger.py  loss.py  parse_config.py  utils.py
src/yolov4/models/: layers.py  loss.py  utils.py  yolov3.py
src/yolov4/utils/: datasets.py
utils/: bbox_ops.py  datasets.py  parse_config.py  utils.py
