[metadata]
name = yolov4
version = 0.0.1
author = Jason Hu 
maintainer = Jason Hu
maintainer_email = dcjasonhu@gmail.com
url = https://github.com/jason-hu7/PyTorch-YOLOv4
description = A package for YOLOv4 written in PyTorch
long_description = file: README.md
long_description_content_type= text/markdown
keywords = object detection, deep learning, YOLOV4
classifiers =
    Development Status :: 1 - Planning
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Topic :: Scientific/Engineering
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Operating System :: POSIX :: Linux
    Operating System :: Unix
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows

[options]
python_requires = >=3.6
package_dir =
    =src
packages = find:
install_requires =
    numpy>=1.18.4
    matplotlib>=3.0
    opencv-python>=4.2
    torch>=1.5.0
    torchvision>=0.6.0
    terminaltables>=3.1.0
    tqdm>=4.46.0
    Pillow>=7.1.2

[options.packages.find]
where = src
exclude =
    tests
    docs

